--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=blog
+
+spring.datasource.url=jdbc:h2:file:./data/blogdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.open-in-view=false
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
