Enable logout, change exception handler & add profiles for database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.open-in-view=false
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.profiles.active=prod
+
